# FamilyTies

./: CMakeLists.txt  README.md
Data/: BaseLayers.tsx  Room_1.tmx  Room_2.tmx  Room_3.tmx  Room_4.tmx  roguelikeIndoor_transparent.tsx  tiles_packed.tsx
Data/Shaders/: fragshader.frag  vertshader.vert
src/: Game.cpp  Game.h  main.cpp
src/GameObjects/: Achievements.cpp  Achievements.h  BoundingBox.cpp  BoundingBox.h  Box.cpp  Box.h  Chain.cpp  Chain.h  GameObject.cpp  GameObject.h  Gameobject2.cpp  Gameobject2.h  Key.cpp  Key.h  PressurePlate.cpp  PressurePlate.h  UIElement.cpp  UIElement.h  player.cpp  player.h  playerMovement.cpp  playerMovement.h
src/Menus/: GameOver.cpp  GameOver.h  MainMenu.cpp  MainMenu.h  MenuSwitcher.cpp  MenuSwitcher.h
src/Tilemap/: Room1.cpp  Room1.h  Room2.cpp  Room2.h  Room3.cpp  Room3.h  Room4.cpp  Room4.h
src/tmxsrc/: CMakeLists.txt  Tiles.cpp  Tiles.h
